# goat_ros

./: README.md
goat_ros_control/: README.md
goat_ros_control/goat_teleop_ros/: CMakeLists.txt  README.md  package.xml
goat_ros_control/goat_teleop_ros/config/: goat_joy.yaml
goat_ros_control/goat_teleop_ros/include/goat_teleop/: goat_joy.hpp  input_conditioning.hpp
goat_ros_control/goat_teleop_ros/launch/: bench_teleop.launch.py  controller_demo.launch.py  goat_joy.launch.py  remote_client.launch.py
goat_ros_control/goat_teleop_ros/src/: goat_joy.cpp  main.cpp
goat_ros_control/goat_teleop_ros/test/: test_goat_joy.cpp  test_input_conditioning.cpp
goat_ros_drivers/: README.md
goat_ros_drivers/goat_vesc_ros/: CMakeLists.txt  README.md  package.xml
goat_ros_drivers/goat_vesc_ros/config/: goat_vesc.yaml  goat_vesc_isaac_vslam.yaml
goat_ros_drivers/goat_vesc_ros/docs/: ARCHITECTURE.md  codex-instructions.md
goat_ros_drivers/goat_vesc_ros/include/goat_vesc_ros/: vesc_node.hpp
goat_ros_drivers/goat_vesc_ros/launch/: goat_vesc.launch.py
goat_ros_drivers/goat_vesc_ros/msg/: VescMotorState.msg
goat_ros_drivers/goat_vesc_ros/src/: main.cpp  vesc_node.cpp
goat_ros_launch/: README.md  package.xml  setup.cfg  setup.py
goat_ros_launch/config/: sensors.yaml
goat_ros_launch/config/isaac_ros/: goat_d435_visual_slam.yaml
goat_ros_launch/config/rosbag/profiles/: core.txt  debug.txt  slam.txt
goat_ros_launch/launch/: bench_robot_teleop.launch.py  goat_d435_visual_slam.launch.py  replay.launch.py  robot.launch.py  robot_d435_visual_slam.launch.py  robot_d435_visual_slam_vio.launch.py  sensors.launch.py  teleop.launch.py
goat_teleop_ros/: CMakeLists.txt  README.md  package.xml
goat_teleop_ros/config/: goat_joy.yaml
goat_teleop_ros/include/goat_teleop/: goat_joy.hpp
goat_teleop_ros/launch/: goat_joy.launch.py
goat_teleop_ros/src/: goat_joy.cpp
goat_vesc_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
goat_vesc_ros/config/: goat_vesc.yaml  goat_vesc_duty_smoke.yaml
goat_vesc_ros/include/goat_vesc_ros/: vesc_node.hpp
goat_vesc_ros/launch/: goat_vesc.launch.py  goat_vesc_duty_smoke.launch.py
goat_vesc_ros/msg/: VescControlCommand.msg
goat_vesc_ros/src/: main.cpp  vesc_node.cpp
