<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goat_ros_launch</name>
  <version>0.0.0</version>
  <description>High-level launch and rosbag profiles for GOAT bringup.</description>
  <maintainer email="goat@example.com">GOAT Maintainers</maintainer>
  <license>TODO</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>goat_teleop</exec_depend>
  <exec_depend>goat_vesc_ros</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
