<?xml version="1.0"?>
<package format="3">
  <name>goat_teleop</name>
  <version>0.1.0</version>
  <description>Minimal joystick teleop node for GOAT.</description>
  <maintainer email="goat@example.com">GOAT Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
