<?xml version="1.0"?>
<package format="3">
  <name>goat_vesc_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble wrapper node for the goat_vesc library.</description>
  <maintainer email="goat@example.com">GOAT Maintainers</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>goat_vesc</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
